working fe + changes to be